--- a/main.html
+++ b/main.html
@@ -14,9 +14,13 @@
 
     <div class="tabs">
 
-        <button class="tab">SERVICES</button>
+        <button class="tab" data-tab-id="goods">
+            SERVICES
+        </button>
         <span class="separator">/</span>
-        <button class="tab cart-tab">CART</button>
+        <button class="tab cart-tab" data-tab-id="cart">
+            CART
+        </button>
 
     </div>
 
