--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEB-STORE</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./files/style.css">
     <link 
     rel="stylesheet" 
     href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
@@ -26,8 +26,8 @@
 
     </div>
 
-    <script src="goods.js" defer></script>
-    <script src="index.js" defer></script>
+    <script src="./files/goods.js" defer></script>
+    <script src="./files/index.js" defer></script>
     
 </body>
 </html>
